Agregué tarjetas de proyectosd y enlaces a cercel

--- a/proyectos.html
+++ b/proyectos.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Proyectos</title>
-  <link rel="stylesheet" href="css/estilo.css">
+  <link rel="stylesheet" href="css/estilo.css">q
+    x
 </head>
 <body>
 
@@ -20,10 +21,31 @@
   </header>
 
   <main>
-    <h1>Preoyectos</h1>
-    <p>Texto simple de la página.</p>
+    <h1>Mis Proyectos</h1>
+  
+    <section class="proyectos">
+      <article class="tarjeta-proyecto">
+        <img src="img/JuegoAdivinaElNumero.png" alt="Proyecto 1">
+        <h2>Juego Adivina el Número</h2>
+        <p>Juego Adivina el Número es una aplicación interactiva donde el jugador debe adivinar un número secreto generado aleatoriamente. Cada intento recibe retroalimentación indicando si el número es mayor o menor, hasta lograr acertarlo. Es ideal para practicar lógica, condicionales y ciclos en programación.</p>
+        <a class="enlace" href="https://mi-juego-ten.vercel.app/">Ver proyecto</a>
+      </article>
+  
+      <article class="tarjeta-proyecto">
+        <img src="img/encriptadorDeTexto.png" alt="Proyecto 2">
+    
+        <h2>Encriptador de texto</h2>
+        <p>En este proyecto desarrollamos una aplicación que permite encriptar y desencriptar texto de manera sencilla, protegiendo la información y permitiendo su recuperación cuando sea necesario. </p>
+        <a class="enlace" href="https://alura-challenge-desaf-o.vercel.app/">Ver proyecto</a>
+      </article>
+  
+      <article class="tarjeta-proyecto">
+        <img src="img/proyecto3.jpg" alt="Proyecto 3">
+        <h2>Nombre del Proyecto 3</h2>
+        <p>Descripción breve del proyecto 3.</p>
+      </article>
+    </section>
   </main>
-
   <footer>
     <p>© 2025 José Alonso</p>
   </footer>
