--- a/proyectos.html
+++ b/proyectos.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Proyectos</title>
-  <link rel="stylesheet" href="css/estilo.css">q
-    x
+  <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
 
